# daily-analyst

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
nginx/: nginx.conf  nginx.conf.template
src/: __init__.py  config.py  main.py
src/models/: journal_entry.py
src/services/: ai_analyzer.py  charts_service.py  notion_service.py
src/utils/: cache.py  validators.py
tests/: conftest.py  test_ai_analyzer.py  test_cache.py  test_charts.py  test_models.py  test_notion_service.py  test_validators.py
